# mtdata

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  nllb_lang_pairs.py  pyproject.toml  pyproject.toml.bak  setup.py
.github/workflows/: python-build-test.yml
crawler/: .gitignore  README.md  requirements.txt  scrapy.cfg
crawler/mtdatabot/: items.py  middlewares.py  pipelines.py  settings.py
crawler/mtdatabot/spiders/: OpusSpider.py  TildeSpider.py  __init__.py
docs/: asciidoctor.css  dids.txt  docinfo.html  how-to-extend.md  how-to-release.md  index.adoc  index.html  make-docs.sh  rouge-github.css  search.html  task-wmt22.adoc  task-wmt22.html
docs/v0.3.4/: index.html
docs/v0.3.5/: dids.txt  index.html
docs/v0.3.6/: dids.txt  index.html
docs/v0.3.7/: dids.txt  index.html
docs/v0.3.8/: dids.txt  index.html
docs/v0.4.0/: index.html
docs/v0.4.1/: index.html
docs/v0.4.2/: index.html
docs/v0.4.3/: index.html
iso-langs/: README.md  iso639_2.tsv  iso639_3.py  iso639_3.tsv  opus_to_iso3.py  tab2py.py
iso-langs/bcp/: README.adoc  bcp47_data.py  iana-scripts.tsv  iso15924.tsv  iso3166.tsv
iso-langs/iso-639-3/: iso-639-3-names.tsv  iso-639-3.tsv
mtdata/: __init__.py  __main__.py  cache.py  data.py  entry.py  index.py  main.py  map.py  mapper.py  opus_xces.py  parser.py  pbar.py  pigz.py  scorer.py  sgm.py  tmx.py  utils.py
mtdata/index/: __init__.py  ai4bharat.py  allenai_nllb.json  allenai_nllb.py  anuvaad.py  anuvaad.tsv  elrc_share.py  elrc_share.tsv  eu.py  flores.py  globalvoices.py  huggingface.py  joshua_indian.py  leipzig.py  leipzig_de.txt  linguatools.py  literature.py  neulab_tedtalks.py  other.py  paracrawl.py  refs.bib  statmt.py  tilde.py  unitednations.py  wikimatrix.py
mtdata/index/opus/: __init__.py  crawl_parse.py  jw300.py  opus100.py  opus_index.py  opus_index.tsv
mtdata/iso/: README.md  __init__.py  __main__.py  bcp47.json  bcp47.py  custom.py  iso639.py  iso639_1.py  iso639_2.py  iso639_3.py
mtdata/recipe/: __init__.py  recipes.yml
mtdata/resource/: allenai_nllb.json  elrc_share.tsv  huggingface-datasets.jsonl  opus_index.tsv  recipes.yml  refs.bib
mtdata/scripts/: recipe_stats.py  tsv2xls.py
recipes/: mtdata.recipes.wmt22-constrained.yml  mtdata.recipes.wmt22.yml  mtdata.recipes.wmt22all.yml  mtdata.recipes.wmt23-constrained.yml  mtdata.recipes.wmt24-constrained.yml  mtdata.recipes.wmt25-constrained.yml  mtdata.recipes.wmt26-constrained.yml  mtdata_privatedata.py
tests/: __init__.py  test_bcp47.py  test_cli.py  test_data_sort.py  test_dataset.py  test_entry.py  test_huggingface.py  test_index.py  test_iso_lookup.py  test_map_cli.py  test_pigz.py  test_recipe.py  test_stats.py  test_tmx.py
